--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
       </div>
     </div> 
   </div>
-    <script src="script.js"></script>
+    <script src="calculadora.js"></script>
   </body>	
 
 </html>
